--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,7 @@
     --cor3:#2fa866;
     --cor4:#1a5c37;
     --cor5:#063d1e;
+    --cor6:#1d14d2;
     --fonte-padrao:Arial,Verdana,helvetica,sans-serif;
     --fonte-destaque:'Bebas Neue', sans-serif;
     --fonte-android:'Android', cursive;
@@ -104,6 +105,18 @@ main h1{
     font-size: 1.8em;
     
 }
+
+section .contato{
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.267);
+}
+
+
+
+
+
 
 main p{
     margin: 15px 0px ;
